--- a/privacy.html
+++ b/privacy.html
@@ -153,10 +153,10 @@
             <div class="flex flex-wrap items-center justify-center gap-6">
                 <!-- Instagram -->
                 <a href="https://www.instagram.com/mirajoai?igsh=bW16MnEzZDNpcHNs&utm_source=qr" target="_blank"
-                    rel="noopener noreferrer" class="hover:text-[#1a767f] transition">
+                    rel="noopener noreferrer" class="hover:text-[#1a767f] transition" aria-label="Instagram">
                     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
                         <path
-                            d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM0 8.98h5V24H0V8.98zM7.5 8.98H12v2.08h.07c.62-1.17 2.13-2.4 4.43-2.4 4.74 0 5.61 3.1 5.61 7.13V24H17v-6.65c0-1.59-.03-3.64-2.22-3.64-2.22 0-2.56 1.73-2.56 3.52V24H7.5V8.98z" />
+                            d="M7.5 2h9A5.5 5.5 0 0 1 22 7.5v9A5.5 5.5 0 0 1 16.5 22h-9A5.5 5.5 0 0 1 2 16.5v-9A5.5 5.5 0 0 1 7.5 2zm0 2A3.5 3.5 0 0 0 4 7.5v9A3.5 3.5 0 0 0 7.5 20h9a3.5 3.5 0 0 0 3.5-3.5v-9A3.5 3.5 0 0 0 16.5 4h-9zm4.5 3.5A4.5 4.5 0 1 1 7.5 12a4.5 4.5 0 0 1 4.5-4.5zm0 2A2.5 2.5 0 1 0 14.5 12a2.5 2.5 0 0 0-2.5-2.5zm5.25-3.75a1 1 0 1 1-2 0a1 1 0 0 1 2 0z" />
                     </svg>
                 </a>
 
@@ -168,7 +168,7 @@
                             d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM0 8.98h5V24H0V8.98zM7.5 8.98H12v2.08h.07c.62-1.17 2.13-2.4 4.43-2.4 4.74 0 5.61 3.1 5.61 7.13V24H17v-6.65c0-1.59-.03-3.64-2.22-3.64-2.22 0-2.56 1.73-2.56 3.52V24H7.5V8.98z" />
                     </svg>
                 </a>
-              <!-- WhatsApp -->
+                <!-- WhatsApp -->
                 <a href="https://wa.me/17274859941" target="_blank" rel="noopener noreferrer"
                     class="hover:text-[#1a767f] transition">
                     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
@@ -210,5 +210,5 @@
         });
     </script>
 </body>
+
 </html>
-    
