--- a/terms.html
+++ b/terms.html
@@ -146,14 +146,14 @@
             <!-- Social Icons -->
             <div class="flex flex-wrap items-center justify-center gap-6">
                 <!-- Instagram -->
-
                 <a href="https://www.instagram.com/mirajoai?igsh=bW16MnEzZDNpcHNs&utm_source=qr" target="_blank"
-                    rel="noopener noreferrer" class="hover:text-[#1a767f] transition">
+                    rel="noopener noreferrer" class="hover:text-[#1a767f] transition" aria-label="Instagram">
                     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
                         <path
-                            d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM0 8.98h5V24H0V8.98zM7.5 8.98H12v2.08h.07c.62-1.17 2.13-2.4 4.43-2.4 4.74 0 5.61 3.1 5.61 7.13V24H17v-6.65c0-1.59-.03-3.64-2.22-3.64-2.22 0-2.56 1.73-2.56 3.52V24H7.5V8.98z" />
+                            d="M7.5 2h9A5.5 5.5 0 0 1 22 7.5v9A5.5 5.5 0 0 1 16.5 22h-9A5.5 5.5 0 0 1 2 16.5v-9A5.5 5.5 0 0 1 7.5 2zm0 2A3.5 3.5 0 0 0 4 7.5v9A3.5 3.5 0 0 0 7.5 20h9a3.5 3.5 0 0 0 3.5-3.5v-9A3.5 3.5 0 0 0 16.5 4h-9zm4.5 3.5A4.5 4.5 0 1 1 7.5 12a4.5 4.5 0 0 1 4.5-4.5zm0 2A2.5 2.5 0 1 0 14.5 12a2.5 2.5 0 0 0-2.5-2.5zm5.25-3.75a1 1 0 1 1-2 0a1 1 0 0 1 2 0z" />
                     </svg>
                 </a>
+
 
                 <!-- LinkedIn -->
                 <a href="https://www.linkedin.com/company/mirajo-ai/" target="_blank" rel="noopener noreferrer"
@@ -164,14 +164,14 @@
                     </svg>
                 </a>
 
-              
+
 
                 <!-- WhatsApp -->
                 <a href="https://wa.me/17274859941" target="_blank" rel="noopener noreferrer"
                     class="hover:text-[#1a767f] transition">
                     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
                         <path
-                           d="M20.52 3.48A11.87 11.87 0 0012.03 0a11.94 11.94 0 00-10.34 17.67L0 24l6.51-1.68A11.94 11.94 0 0012.03 24a11.87 11.87 0 008.49-20.52zM12.03 22c-1.77 0-3.52-.47-5.03-1.34l-.36-.21-3.86.99 1.03-3.76-.23-.38A9.94 9.94 0 1122 12c0 5.51-4.48 10-9.97 10zm5.51-7.57c-.3-.15-1.75-.86-2.02-.95-.27-.1-.47-.15-.67.15s-.77.95-.94 1.15-.35.22-.65.08a8.03 8.03 0 01-2.4-1.48 9.12 9.12 0 01-1.69-2.12c-.18-.3 0-.46.14-.61.15-.15.3-.35.45-.52.15-.18.2-.3.3-.5.1-.2.05-.37-.03-.52s-.67-1.6-.92-2.2c-.24-.58-.5-.5-.67-.5l-.57-.01c-.2 0-.52.07-.8.37-.27.3-1.06 1.04-1.06 2.53s1.09 2.94 1.25 3.14c.15.2 2.14 3.3 5.2 4.63.73.32 1.3.51 1.75.65.74.24 1.42.2 1.95.12.6-.09 1.75-.72 2-1.42.24-.7.24-1.3.18-1.42-.05-.12-.27-.2-.57-.35z" />
+                            d="M20.52 3.48A11.87 11.87 0 0012.03 0a11.94 11.94 0 00-10.34 17.67L0 24l6.51-1.68A11.94 11.94 0 0012.03 24a11.87 11.87 0 008.49-20.52zM12.03 22c-1.77 0-3.52-.47-5.03-1.34l-.36-.21-3.86.99 1.03-3.76-.23-.38A9.94 9.94 0 1122 12c0 5.51-4.48 10-9.97 10zm5.51-7.57c-.3-.15-1.75-.86-2.02-.95-.27-.1-.47-.15-.67.15s-.77.95-.94 1.15-.35.22-.65.08a8.03 8.03 0 01-2.4-1.48 9.12 9.12 0 01-1.69-2.12c-.18-.3 0-.46.14-.61.15-.15.3-.35.45-.52.15-.18.2-.3.3-.5.1-.2.05-.37-.03-.52s-.67-1.6-.92-2.2c-.24-.58-.5-.5-.67-.5l-.57-.01c-.2 0-.52.07-.8.37-.27.3-1.06 1.04-1.06 2.53s1.09 2.94 1.25 3.14c.15.2 2.14 3.3 5.2 4.63.73.32 1.3.51 1.75.65.74.24 1.42.2 1.95.12.6-.09 1.75-.72 2-1.42.24-.7.24-1.3.18-1.42-.05-.12-.27-.2-.57-.35z" />
                     </svg>
                 </a>
 
