--- a/privacy.html
+++ b/privacy.html
@@ -61,6 +61,25 @@
             <a href="https://home.mirajoco.org/" class="block hover:text-[#1a767f] transition">MiRAjO Collective</a>
         </div>
     </header>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const menuToggle = document.getElementById("menu-toggle");
+            const mobileMenu = document.getElementById("mobile-menu");
+            const menuIcon = document.getElementById("menu-icon");
+
+            menuToggle.addEventListener("click", function () {
+                mobileMenu.classList.toggle("hidden");
+
+                // Animate icon (optional: swap hamburger with X)
+                if (mobileMenu.classList.contains("hidden")) {
+                    menuIcon.innerHTML = `<path d="M4 6h16M4 12h16M4 18h16" />`;
+                } else {
+                    menuIcon.innerHTML = `<path d="M6 18L18 6M6 6l12 12" />`;
+                }
+            });
+        });
+    </script>
+
     <!-- ✅ NAVBAR END -->
 
     <main class="max-w-4xl mx-auto bg-white rounded-lg shadow-lg p-6 md:p-12 text-sm md:text-base">
