--- a/index.html
+++ b/index.html
@@ -109,51 +109,66 @@
 </head>
 
 <body class="bg-white text-black">
-
     <!-- ✅ NAVBAR START -->
     <header class="sticky top-0 z-50 bg-white/70 backdrop-blur-md shadow-md transition-all duration-300 ease-in-out">
         <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
             <!-- Logo -->
             <a href="/" class="transition-transform duration-300 hover:scale-105">
-                <img src="img/nav.png" alt="MirajoAI Logo"
-                    class="h-20 w-20 object-contain shadow-none bg-transparent border-none"
-                    style="background: transparent; box-shadow: none; border: none;"   />
+                <img src="img/nav.png" alt="MiRAjO AI Logo" class="h-16 w-16 object-contain" />
             </a>
 
             <!-- Desktop Nav -->
-            <nav class="space-x-8 hidden md:flex text-black text-base font-light">
-                <a href="/pricing" class="hover:text-[#1a767f] transition-colors duration-200">Pricing</a>
-                <a href="https://home.mirajoco.org/" class="hover:text-[#1a767f] transition-colors duration-200">MiRAjO
+            <nav class="hidden md:flex items-center gap-8 text-black text-base font-light">
+                <a href="/pricing"
+                    class="inline-flex items-center hover:text-[#1a767f] transition-colors duration-200">Pricing</a>
+                <a href="https://home.mirajoco.org/"
+                    class="inline-flex items-center hover:text-[#1a767f] transition-colors duration-200">MiRAjO
                     Collective</a>
-                <a href="https://app.mirajo.ai/" class="hover:text-[#1a767f] transition-colors duration-200">Client
+                <a href="https://app.mirajo.ai/"
+                    class="inline-flex items-center hover:text-[#1a767f] transition-colors duration-200">Client
                     Login</a>
-                <a href="/blog/index.html" class="block px-6 py-3 font-medium hover:bg-gray-50">Blog</a>
-
+                <a href="/blog/index.html"
+                    class="inline-flex items-center hover:text-[#1a767f] transition-colors duration-200">Blog</a>
             </nav>
 
             <!-- Mobile Toggle -->
-            <div class="md:hidden">
-                <button id="menu-toggle" class="text-black focus:outline-none">
-                    <svg id="menu-icon" class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2"
-                        viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round">
-                        <path d="M4 6h16M4 12h16M4 18h16" />
-                    </svg>
-                </button>
-            </div>
+            <button id="menu-toggle" class="md:hidden p-2 text-black focus:outline-none" aria-label="Toggle menu"
+                aria-expanded="false" aria-controls="mobile-menu">
+                <svg id="menu-icon" class="w-7 h-7" fill="none" stroke="currentColor" stroke-width="2"
+                    viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M4 6h16M4 12h16M4 18h16" />
+                </svg>
+            </button>
+        </div>
 
-            <!-- Mobile Menu -->
-            <div id="mobile-menu"
-                class="md:hidden hidden px-6 pb-6 pt-4 space-y-3 text-black text-base font-bold bg-white border-t border-gray-200">
-                <a href="/pricing" class="block hover:text-[#1a767f] transition">Pricing</a>
-                <a href="https://login.mirajoagency.org/" target="_blank"
-                    class="block hover:text-[#1a767f] transition">Client Login</a>
-                <a href="https://home.mirajoco.org/" class="block hover:text-[#1a767f] transition">MiRAjO Collective</a>
-                <a href="/blog/index.html" class="block px-6 py-3 font-medium hover:bg-gray-50">Blog</a>
-
-            </div>
-
+        <!-- Mobile Menu -->
+        <div id="mobile-menu"
+            class="md:hidden hidden px-6 pb-6 pt-4 space-y-3 text-black text-base font-medium bg-white border-t border-gray-200">
+            <a href="/pricing" class="block hover:text-[#1a767f] transition-colors">Pricing</a>
+            <a href="https://app.mirajo.ai/" class="block hover:text-[#1a767f] transition-colors">Client Login</a>
+            <a href="https://home.mirajoco.org/" class="block hover:text-[#1a767f] transition-colors">MiRAjO
+                Collective</a>
+            <a href="/blog/index.html" class="block hover:text-[#1a767f] transition-colors">Blog</a>
+        </div>
     </header>
     <!-- ✅ NAVBAR END -->
+
+    <script>
+        // Mobile menu toggle
+        (function () {
+            const btn = document.getElementById('menu-toggle');
+            const menu = document.getElementById('mobile-menu');
+
+            if (!btn || !menu) return;
+
+            btn.addEventListener('click', () => {
+                const isOpen = !menu.classList.contains('hidden');
+                menu.classList.toggle('hidden');
+                btn.setAttribute('aria-expanded', String(!isOpen));
+            });
+        })();
+    </script>
+
     <section
         class="relative w-full bg-white text-black overflow-hidden min-h-screen flex items-center justify-center px-6 py-24">
 
@@ -2229,53 +2244,53 @@
     <!-- Embedded Footer -->
     <!-- Footer -->
     <div class="mt-16 w-full flex flex-col items-center justify-center">
-      <footer class="text-black py-6 px-4 rounded-xl shadow-md w-full max-w-3xl">
-        <div class="flex flex-col items-center justify-center text-center gap-4">
-          <div class="flex flex-wrap items-center justify-center gap-6">
+        <footer class="text-black py-6 px-4 rounded-xl shadow-md w-full max-w-3xl">
+            <div class="flex flex-col items-center justify-center text-center gap-4">
+                <div class="flex flex-wrap items-center justify-center gap-6">
 
-            <a href="https://www.instagram.com/mirajoai?igsh=bW16MnEzZDNpcHNs&utm_source=qr" target="_blank"
-              rel="noopener noreferrer" class="hover:text-[#1a767f] transition" aria-label="Instagram">
-              <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-                <path
-                  d="M7.5 2h9A5.5 5.5 0 0 1 22 7.5v9A5.5 5.5 0 0 1 16.5 22h-9A5.5 5.5 0 0 1 2 16.5v-9A5.5 5.5 0 0 1 7.5 2zm0 2A3.5 3.5 0 0 0 4 7.5v9A3.5 3.5 0 0 0 7.5 20h9a3.5 3.5 0 0 0 3.5-3.5v-9A3.5 3.5 0 0 0 16.5 4h-9zm4.5 3.5A4.5 4.5 0 1 1 7.5 12a4.5 4.5 0 0 1 4.5-4.5zm0 2A2.5 2.5 0 1 0 14.5 12a2.5 2.5 0 0 0-2.5-2.5zm5.25-3.75a1 1 0 1 1-2 0a1 1 0 0 1 2 0z" />
-              </svg>
-            </a>
+                    <a href="https://www.instagram.com/mirajoai?igsh=bW16MnEzZDNpcHNs&utm_source=qr" target="_blank"
+                        rel="noopener noreferrer" class="hover:text-[#1a767f] transition" aria-label="Instagram">
+                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                            <path
+                                d="M7.5 2h9A5.5 5.5 0 0 1 22 7.5v9A5.5 5.5 0 0 1 16.5 22h-9A5.5 5.5 0 0 1 2 16.5v-9A5.5 5.5 0 0 1 7.5 2zm0 2A3.5 3.5 0 0 0 4 7.5v9A3.5 3.5 0 0 0 7.5 20h9a3.5 3.5 0 0 0 3.5-3.5v-9A3.5 3.5 0 0 0 16.5 4h-9zm4.5 3.5A4.5 4.5 0 1 1 7.5 12a4.5 4.5 0 0 1 4.5-4.5zm0 2A2.5 2.5 0 1 0 14.5 12a2.5 2.5 0 0 0-2.5-2.5zm5.25-3.75a1 1 0 1 1-2 0a1 1 0 0 1 2 0z" />
+                        </svg>
+                    </a>
 
 
-            <a href="https://www.linkedin.com/company/mirajo-ai/" target="_blank" rel="noopener noreferrer"
-              class="hover:text-[#1a767f] transition" aria-label="LinkedIn">
-              <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-                <path
-                  d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM0 8.98h5V24H0V8.98zM7.5 8.98H12v2.08h.07c.62-1.17 2.13-2.4 4.43-2.4 4.74 0 5.61 3.1 5.61 7.13V24H17v-6.65c0-1.59-.03-3.64-2.22-3.64-2.22 0-2.56 1.73-2.56 3.52V24H7.5V8.98z" />
-              </svg>
-            </a>
+                    <a href="https://www.linkedin.com/company/mirajo-ai/" target="_blank" rel="noopener noreferrer"
+                        class="hover:text-[#1a767f] transition" aria-label="LinkedIn">
+                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                            <path
+                                d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM0 8.98h5V24H0V8.98zM7.5 8.98H12v2.08h.07c.62-1.17 2.13-2.4 4.43-2.4 4.74 0 5.61 3.1 5.61 7.13V24H17v-6.65c0-1.59-.03-3.64-2.22-3.64-2.22 0-2.56 1.73-2.56 3.52V24H7.5V8.98z" />
+                        </svg>
+                    </a>
 
-            <a href="https://wa.me/17274859941" target="_blank" rel="noopener noreferrer"
-              class="hover:text-[#1a767f] transition" aria-label="WhatsApp">
-              <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-                <path
-                  d="M20.52 3.48A11.87 11.87 0 0012.03 0a11.94 11.94 0 00-10.34 17.67L0 24l6.51-1.68A11.94 11.94 0 0012.03 24a11.87 11.87 0 008.49-20.52zM12.03 22c-1.77 0-3.52-.47-5.03-1.34l-.36-.21-3.86.99 1.03-3.76-.23-.38A9.94 9.94 0 1122 12c0 5.51-4.48 10-9.97 10zm5.51-7.57c-.3-.15-1.75-.86-2.02-.95-.27-.1-.47-.15-.67.15s-.77.95-.94 1.15-.35.22-.65.08a8.03 8.03 0 01-2.4-1.48 9.12 9.12 0 01-1.69-2.12c-.18-.3 0-.46.14-.61.15-.15.3-.35.45-.52.15-.18.2-.3.3-.5.1-.2.05-.37-.03-.52s-.67-1.6-.92-2.2c-.24-.58-.5-.5-.67-.5l-.57-.01c-.2 0-.52.07-.8.37-.27.3-1.06 1.04-1.06 2.53s1.09 2.94 1.25 3.14c.15.2 2.14 3.3 5.2 4.63.73.32 1.3.51 1.75.65.74.24 1.42.2 1.95.12.6-.09 1.75-.72 2-1.42.24-.7.24-1.3.18-1.42-.05-.12-.27-.2-.57-.35z" />
-              </svg>
-            </a>
-            <a href="mailto:hello@ai.mirajoco.org" class="hover:text-[#1a767f] transition" aria-label="Email">
-              <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-                <path
-                  d="M2 4a2 2 0 012-2h16a2 2 0 012 2v1.2l-10 6.25L2 5.2V4zm0 3.8v12.2a2 2 0 002 2h16a2 2 0 002-2V7.8l-10 6.25L2 7.8z" />
-              </svg>
-            </a>
-          </div>
+                    <a href="https://wa.me/17274859941" target="_blank" rel="noopener noreferrer"
+                        class="hover:text-[#1a767f] transition" aria-label="WhatsApp">
+                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                            <path
+                                d="M20.52 3.48A11.87 11.87 0 0012.03 0a11.94 11.94 0 00-10.34 17.67L0 24l6.51-1.68A11.94 11.94 0 0012.03 24a11.87 11.87 0 008.49-20.52zM12.03 22c-1.77 0-3.52-.47-5.03-1.34l-.36-.21-3.86.99 1.03-3.76-.23-.38A9.94 9.94 0 1122 12c0 5.51-4.48 10-9.97 10zm5.51-7.57c-.3-.15-1.75-.86-2.02-.95-.27-.1-.47-.15-.67.15s-.77.95-.94 1.15-.35.22-.65.08a8.03 8.03 0 01-2.4-1.48 9.12 9.12 0 01-1.69-2.12c-.18-.3 0-.46.14-.61.15-.15.3-.35.45-.52.15-.18.2-.3.3-.5.1-.2.05-.37-.03-.52s-.67-1.6-.92-2.2c-.24-.58-.5-.5-.67-.5l-.57-.01c-.2 0-.52.07-.8.37-.27.3-1.06 1.04-1.06 2.53s1.09 2.94 1.25 3.14c.15.2 2.14 3.3 5.2 4.63.73.32 1.3.51 1.75.65.74.24 1.42.2 1.95.12.6-.09 1.75-.72 2-1.42.24-.7.24-1.3.18-1.42-.05-.12-.27-.2-.57-.35z" />
+                        </svg>
+                    </a>
+                    <a href="mailto:hello@ai.mirajoco.org" class="hover:text-[#1a767f] transition" aria-label="Email">
+                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                            <path
+                                d="M2 4a2 2 0 012-2h16a2 2 0 012 2v1.2l-10 6.25L2 5.2V4zm0 3.8v12.2a2 2 0 002 2h16a2 2 0 002-2V7.8l-10 6.25L2 7.8z" />
+                        </svg>
+                    </a>
+                </div>
 
-          <div class="flex items-center justify-center gap-4 text-sm font-medium mt-4">
-            <a href="/privacy" class="text-[#1a767f] hover:underline transition">Privacy Policy</a>
-            <span class="text-gray-400">|</span>
-            <a href="/terms" class="text-[#1a767f] hover:underline transition">Terms of Service</a>
-          </div>
+                <div class="flex items-center justify-center gap-4 text-sm font-medium mt-4">
+                    <a href="/privacy" class="text-[#1a767f] hover:underline transition">Privacy Policy</a>
+                    <span class="text-gray-400">|</span>
+                    <a href="/terms" class="text-[#1a767f] hover:underline transition">Terms of Service</a>
+                </div>
 
-          <div class="text-sm text-gray-500 mt-2">
-            &copy; 2025 Mirajo Collective. All rights reserved.
-          </div>
-        </div>
-      </footer>
+                <div class="text-sm text-gray-500 mt-2">
+                    &copy; 2025 Mirajo Collective. All rights reserved.
+                </div>
+            </div>
+        </footer>
     </div>
 
     </section>
