Update multiple pages

--- a/book-a-demo.html
+++ b/book-a-demo.html
@@ -48,7 +48,7 @@
     </div>
     <div id="mobile-menu"
       class="md:hidden hidden px-6 pb-6 pt-4 space-y-3 text-black text-base font-bold bg-white border-t border-gray-200">
-      <a href="/" class="block px-6 py-3 font-medium hover:bg-gray-50">Home</a>
+      <a href="https://app.mirajo.ai/" class="block px-6 py-3 font-medium hover:bg-gray-50">Home</a>
       <a href="/pricing" class="block hover:text-[#1a767f] transition">Pricing</a>
       <a href="https://login.mirajoagency.org/" target="_blank" class="block hover:text-[#1a767f] transition">Client
         Login</a>
