--- a/pricing/index.html
+++ b/pricing/index.html
@@ -97,7 +97,7 @@
   <!-- Mobile Menu -->
   <div id="mobile-menu"
        class="md:hidden hidden px-6 pb-6 pt-4 space-y-3 text-black text-base font-medium bg-white border-t border-gray-200">
-    <a href="/" class="block hover:text-[#1a767f] transition">Home</a>
+    <a href="https://app.mirajo.ai/" class="block hover:text-[#1a767f] transition">Home</a>
     <a href="https://app.mirajo.ai/" class="block hover:text-[#1a767f] transition">Client Login</a>
     <a href="https://home.mirajoco.org/" class="block hover:text-[#1a767f] transition">MiRAjO Collective</a>
     <a href="/blog/index.html" class="block hover:text-[#1a767f] transition">Blog</a>
