--- a/index.html
+++ b/index.html
@@ -2176,7 +2176,7 @@
     </script>
 
     <!-- ✅ Mobile Nav Toggle -->
-   
+
     <script src="https://widgets.leadconnectorhq.com/loader.js"
         data-resources-url="https://widgets.leadconnectorhq.com/chat-widget/loader.js"
         data-widget-id="67ef608a8e8aa7de36f311a5">
@@ -2268,37 +2268,43 @@
     </div>
     </section>
     <script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const btn = document.getElementById("menu-toggle");
-    const menu = document.getElementById("mobile-menu");
-    if (!btn || !menu) return;
+        document.addEventListener("DOMContentLoaded", () => {
+            const btn = document.getElementById("menu-toggle");
+            const menu = document.getElementById("mobile-menu");
+            if (!btn || !menu) return;
 
-    const toggle = () => {
-      const isHidden = menu.classList.contains("hidden");
-      menu.classList.toggle("hidden");
-      btn.setAttribute("aria-expanded", String(isHidden));
-    };
+            const toggle = () => {
+                const isHidden = menu.classList.contains("hidden");
+                menu.classList.toggle("hidden");
+                btn.setAttribute("aria-expanded", String(isHidden));
+            };
 
-    btn.addEventListener("click", toggle);
+            btn.addEventListener("click", toggle);
 
-    // Close on link click (nice for mobile UX)
-    menu.addEventListener("click", (e) => {
-      if (e.target.closest("a")) {
-        menu.classList.add("hidden");
-        btn.setAttribute("aria-expanded", "false");
-      }
-    });
+            // Close on link click (nice for mobile UX)
+            menu.addEventListener("click", (e) => {
+                if (e.target.closest("a")) {
+                    menu.classList.add("hidden");
+                    btn.setAttribute("aria-expanded", "false");
+                }
+            });
 
-    // Close on Escape
-    document.addEventListener("keydown", (e) => {
-      if (e.key === "Escape" && !menu.classList.contains("hidden")) {
-        menu.classList.add("hidden");
-        btn.setAttribute("aria-expanded", "false");
-      }
-    });
-  });
-</script>
-
+            // Close on Escape
+            document.addEventListener("keydown", (e) => {
+                if (e.key === "Escape" && !menu.classList.contains("hidden")) {
+                    menu.classList.add("hidden");
+                    btn.setAttribute("aria-expanded", "false");
+                }
+            });
+        });
+    </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W4D3DY44L5"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-W4D3DY44L5');
+    </script>
 </body>
 
 </html>
